# PseudoRandomFunction

./: CMakeLists.txt  Design Decision for toeplitz filling.docx  PRF_naive.cpp  README.md  m  matrixvecmul.cpp  pi  pi_protocol  pi_protocol.cpp  pi_protocol_BC.cpp  prf.cpp  prf_naive  ~$sign Decision for toeplitz filling.docx
archivedcode/: matrixvecmul.cpp
src/2PC/: CMakeLists.txt  client  client.cpp  server  server.cpp
src/2PC/comm/: recv.cpp
src/2PC/include/darkmatter/: Toeplitz-by-x.hpp  data_receiver.h  data_sender.h  utils.hpp
src/2PC/src/: Toeplitz-by-x.cpp  Toeplitz-by-x_p1.cpp  Toeplitz-by-x_p2.cpp  data_receiver.cpp  data_sender.cpp
src/2PC/tests/: mains.h  test_OT.cpp  test_Toeplitz-by-x.cpp
src/darkmattercode/: CMakeLists.txt  test-phase1  test-prf  test_unpacked_PRF
src/darkmattercode/include/darkmatter/: PRF.hpp  Timing.hpp  Toeplitz-by-x.hpp  mains.hpp  packedMod2.hpp  packedMod3.hpp  packed_PRF_central.h
src/darkmattercode/manual-build/: prf
src/darkmattercode/src/: OT copy.cpp  OT.cpp  PRF.cpp  Toeplitz-by-x.cpp  packed_PRF_central.cpp  unpacked_PRF_central.cpp
src/darkmattercode/tests/: CMakeLists.txt  mains.h  test_OT.cpp  test_PRF.cpp  test_Packed_PRF.cpp  test_Toeplitz-by-x.cpp  test_packedMod3.cpp  test_unpacked_PRF.cpp
src/libsodium/: CMakeLists.txt  a.out  main.cpp  test_secret_main.cpp
src/libsodium/libsodium-stable/: Makefile  config.status  libtool
src/libsodium/libsodium-stable/builds/: Makefile
src/libsodium/libsodium-stable/contrib/: Makefile
src/libsodium/libsodium-stable/dist-build/: Makefile
src/libsodium/libsodium-stable/msvc-scripts/: Makefile
src/libsodium/libsodium-stable/src/: Makefile
src/libsodium/libsodium-stable/src/libsodium/: Makefile
src/libsodium/libsodium-stable/src/libsodium/.libs/: libsodium.23.dylib
src/libsodium/libsodium-stable/src/libsodium/crypto_auth/.deps/: libsodium_la-crypto_auth.Plo
src/libsodium/libsodium-stable/src/libsodium/crypto_box/.deps/: libsodium_la-crypto_box.Plo  libsodium_la-crypto_box_easy.Plo  libsodium_la-crypto_box_seal.Plo
src/libsodium/libsodium-stable/src/libsodium/crypto_generichash/.deps/: libsodium_la-crypto_generichash.Plo
src/libsodium/libsodium-stable/src/libsodium/include/: Makefile
src/libsodium/libsodium-stable/test/: Makefile
src/libsodium/libsodium-stable/test/default/: Makefile  aead_aes256gcm  aead_aes256gcm2  aead_chacha20poly1305  aead_chacha20poly13052  aead_xchacha20poly1305  auth  auth2  auth3  auth5  auth6  auth7  box  box2  box7  box8  box_easy  box_easy2  box_seal  box_seed  chacha20  codecs  core1  core2  core3  core4  core5  core6  core_ed25519  core_ristretto255  ed25519_convert  generichash  generichash2  generichash3  hash  hash3  kdf  keygen  kx  metamorphic  (+38 more)
src/libsodium/libsodium-stable/test/default/.deps/: aead_aes256gcm.Po  aead_aes256gcm2.Po  aead_chacha20poly1305.Po  aead_chacha20poly13052.Po  aead_xchacha20poly1305.Po  auth.Po  auth2.Po  auth3.Po  auth5.Po  auth6.Po  auth7.Po  box.Po  box2.Po  box7.Po  box8.Po  box_easy.Po  box_easy2.Po  box_seal.Po  box_seed.Po  chacha20.Po  codecs.Po  core1.Po  core2.Po  core3.Po  core4.Po  core5.Po  core6.Po  core_ed25519.Po  core_ristretto255.Po  ed25519_convert.Po  generichash.Po  generichash2.Po  generichash3.Po  hash.Po  hash3.Po  kdf.Po  keygen.Po  kx.Po  metamorphic.Po  misuse.Po  (+37 more)
src/libsodium/libsodium-stable/test/default/.libs/: aead_aes256gcm  aead_aes256gcm2  aead_chacha20poly1305  aead_chacha20poly13052  aead_xchacha20poly1305  auth  auth2  auth3  auth5  auth6  auth7  box  box2  box7  box8  box_easy  box_easy2  box_seal  box_seed  chacha20  codecs  core1  core2  core3  core4  core5  core6  core_ed25519  core_ristretto255  ed25519_convert  generichash  generichash2  generichash3  hash  hash3  kdf  keygen  kx  metamorphic  misuse  (+37 more)
src/newprotocol/: CMakeLists.txt  client  pCentralizedPRF  pDarkMatterPRF  round1.txt  test_buggy_snail  test_ind_lookup  test_int_pack  test_np  test_np_lookup  test_oprf  test_oprf_lookup  test_packed_prf  test_prf  test_prf_lookup  test_unpacked_PRF  unit_lookup
src/newprotocol/include/darkmatter/: OPRF.h  OT.hpp  PRF.hpp  Toeplitz-by-x.hpp  buggy_snail.h  integer_pack.h  lookup_functions.h  mains.hpp  newprotocol.h  newprotocol.hpp  newprotocol_test.h  newprotocol_test.hpp  packedMod2.hpp  packedMod3.hpp  unpacked_PRF_central.h  utils.hpp
src/newprotocol/src/: OPRF.cpp  OT.cpp  PRF.cpp  Toeplitz-by-x.cpp  buggy_snail.cpp  integer_pack.cpp  lookup_functions.cpp  newprotocol.cpp  packed_PRF_central.cpp  unpacked_PRF_central.cpp
src/newprotocol/tests/: newprotocol_driver.cpp  test_PRF.cpp  test_PRF_central_packed.cpp  test_Packed_PRF.cpp  test_buggy_snail.cpp  test_central_int_packed.cpp  test_dm_lookup.cpp  test_dmprotocol.cpp  test_independent_lookup.cpp  test_lookup.cpp  test_newprotocol.cpp  test_oprf.cpp  test_packed_PRF_central_lookup.cpp  test_unit_newprotocol.cpp  test_unpacked_PRF.cpp  test_unpacked_phase1.cpp
src/old/2PC copy/: CMakeLists.txt  test-packedMod3
src/old/2PC copy/comm/: client.cpp  recv.h  server.cpp
src/old/2PC copy/include/darkmatter/: OT.hpp  packedMod2.hpp
src/old/2PC copy/src/: OT.cpp  data_receiver.cpp
src/old/2PC copy/tests/: test_Toeplitz-by-x.cpp
src/old/scunittest/: CMakeLists.txt  pi23protpacked.cpp  piprot_test.cpp  utils.h
src/old/secretsharing copy/: CMakeLists.txt  dmweakPRF.h  mains.h  pi23protpacked.cpp  piprot_test.cpp  secShareTiming.h  utils.h  utilspacked.cpp
src/scunittest/: CMakeLists.txt  pi23protpacked.cpp  pi_unit_test.cpp  piprot_debug.cpp  piprot_test.cpp
src/scunittest/include/: CMakeLists.txt  pi23protpacked.cpp  pi23protpacked.h  utils.cpp
src/secretsharing/: CMakeLists.txt  dmweakPRF.cpp  dmweakPRF.h  dmweakPRFnoPack.h  dmweakPRFnopack.cpp  dmweakPRFpacked.cpp  dmweakPRFpacked.h  pi23prot.cpp  pi23prot.h  pi23protpacked.cpp  pi23protpacked.h  pi_unit_test.cpp  pi_unit_test.h  piprot_test  piprot_test.cpp  piprot_unpck_test.cpp  prfTiming.cpp  randomZ.cpp  secShareTiming  secShareTiming.cpp  secShareTimingpacked.cpp  utils.cpp  utils.h  utilspacked.cpp  utilspacked.h
(+456 files in other folders)
